--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,7 @@
 .App {
   text-align: center;
+  background-color: #282c34;
+  display: block;
 }
 
 .App-logo {
@@ -29,4 +31,9 @@
   to {
     transform: rotate(360deg);
   }
+}
+
+h1{
+  font-size: 54px;
+  color: #fff;
 }
