--- a/src/App.css
+++ b/src/App.css
@@ -1,7 +1,9 @@
+html,body{
+  background-color: #282c34;
+}
 .App {
   text-align: center;
-  background-color: #282c34;
-  display: block;
+ 
 }
 
 .App-logo {
